# speciesgen

./: Cargo.toml  LICENSE  install.md  readme.md
man/: speciesgen.1
src/: cli.rs  command.rs  consts.rs  error.rs  fs.rs  main.rs  model.rs
src/command/: build.rs  export.rs
src/model/: category.rs  chests.rs  frame.rs  grid.rs  item.rs  legs.rs  op.rs  patch.rs  rarity.rs  subs.rs  subsfriendly.rs  tooltip.rs
